--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body{
     min-height: 100vh;
 }
 
-#container--main{
+.container--main{
     position: relative;
     width: 100%;
     height: 100vh;
@@ -58,7 +58,7 @@ body{
     border-bottom: 1px solid #fff;
 }
 
-#profile-pic{
+.profile-pic{
     position: relative;
     border-radius: 50%;
     object-fit: cover;
@@ -74,15 +74,28 @@ body{
     text-align: center;
 }
 
-.profile--title{
+.sub--title{
     color: #fff;
     font-size: .8em;
     font-weight: 300;
 }
 
-.section--title{
+.section--title--left{
     color: #fff;
-    margin: 20px 0;
+    margin: 16px 0;
+}
+
+.section--title--right{
+    margin: 16px 0;
+}
+
+.section--content{
+    margin-bottom: 40px;
+}
+
+.section--content p{
+    letter-spacing: 1px;
+    margin-bottom: 10px;
 }
 
 .contact--info{
@@ -107,14 +120,111 @@ body{
     color: var(--mainLinkColor)
 }
 
+.education ul{
+    margin-left: 16px;
+}
+
+.education p{
+    color: var(--mainLinkColor);
+}
+
+.education li h4{
+    color: #fff;
+    font-weight: 600;
+}
+
+.education li h4:last-child{
+    color: #fff;
+    font-weight: 300;
+}
+
+.downloads{
+    margin: 0 auto;
+    width: 300px;
+}
+
+.buttons{
+    position: absolute;
+    bottom: 0;
+    width: 300px;
+    font-weight: 600;
+    margin-bottom: 24px;
+}
+
+.button{
+    background-color: var(--mainLinkColor);
+    border-radius: 6px;
+    padding: 8px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.button i{
+    color: #000;
+}
+
+.button:hover{
+    background-color: var(--secondaryLinkColor);
+}
+
 .right--side{
     position: relative;
     background-color: var(--mainBackGroundColor);
     padding: 40px;
 }
 
-.divider{
-    border-bottom: 3px solid var(--mainLinkColor);
-    width: 15%;
-    margin-bottom: 16px;
+.right--side p, li{
+    color: var(--secondaryTextColor);
+}
+
+.about p{
+    margin-left: 16px;
+}
+
+.experience .experience--container{
+    display: flex;
+    flex-direction: row;
+    margin-left: 16px;
+    border-left: 1px solid var(--secondaryTextColor);
+    padding: 8px;
+}
+
+.experience .experience--container li{
+    list-style: circle;
+    padding: 6px;
+}
+
+.experience .experience--container .company--year{
+    min-width: 150px;
+}
+
+.tech--items{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    margin: 0  0 16px 16px;
+}
+
+.tech--cards{
+    border: 1px solid var(--secondaryTextColor);
+    border-radius: 6px;
+    padding: 6px;
+}
+
+.project--title{
+    font-weight: 500;
+    color: var(--secondaryTextColor);
+}
+
+.project--items{
+    border-left: 1px solid var(--secondaryTextColor);
+    padding: 8px;
+    margin: 32px 0;
+}
+
+.linebreak{
+    border-bottom: 1px solid var(--secondaryTextColor);
+    width: 100%;
+    height: 1px;
+    margin: 16px 0;
 }
