--- a/styles/style.css
+++ b/styles/style.css
@@ -120,20 +120,20 @@ body{
     color: var(--mainLinkColor)
 }
 
-.education ul{
+.education--card{
     margin-left: 16px;
 }
 
-.education p{
+.education--card p{
     color: var(--mainLinkColor);
 }
 
-.education li h4{
+.education--card h4{
     color: #fff;
     font-weight: 600;
 }
 
-.education li h4:last-child{
+.education--card h4:last-child{
     color: #fff;
     font-weight: 300;
 }
@@ -181,7 +181,7 @@ body{
     margin-left: 16px;
 }
 
-.experience .experience--container{
+.experience--container{
     display: flex;
     flex-direction: row;
     margin-left: 16px;
@@ -189,12 +189,12 @@ body{
     padding: 8px;
 }
 
-.experience .experience--container li{
+.experience--container li{
     list-style: circle;
     padding: 6px;
 }
 
-.experience .experience--container .company--year{
+.company--year{
     min-width: 150px;
 }
 
@@ -227,4 +227,54 @@ body{
     width: 100%;
     height: 1px;
     margin: 16px 0;
+}
+
+@media screen and (max-width: 900px){
+    .container--main{
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        height: 100vh;
+        margin: 0 auto;
+    }
+
+    .social--links ul{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .downloads{
+        margin: 20px auto;
+        height: auto;
+        width: 300px;
+    }
+    
+    .buttons{
+        position: relative;
+        bottom: 0;
+        width: 300px;
+        font-weight: 600;
+    }
+}
+
+@media screen and (max-width: 750px){
+    .social--links ul{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 550px){
+    .social--links ul{
+        display: table;
+    }
+
+    .left--side h3{
+        text-align: left;
+    }
+
+    .experience--container{
+        display: inline-block;
+        border: none;
+    }
 }
