--- a/styles/style.css
+++ b/styles/style.css
@@ -270,7 +270,7 @@ body{
     }
 
     .left--side h3{
-        text-align: left;
+        text-align: center;
     }
 
     .experience--container{
